# openjd-rs

./: .gitattributes  AGENTS.md  Cargo.toml  DEVELOPMENT.md  RELEASING.md  THIRD-PARTY-LICENSES  deny.toml  release-plz.toml
.config/: nextest.toml
.github/: CODEOWNERS
crates/openjd-expr/: Cargo.toml
crates/openjd-expr/src/: default_library.rs  edit_distance.rs  error.rs  format_string.rs  function_library.rs  lib.rs  path_mapping.rs  profile.rs  range_expr.rs  symbol_table.rs  types.rs  uri_path.rs  value.rs
crates/openjd-expr/src/eval/: evaluator.rs  mod.rs  parse.rs
crates/openjd-expr/src/functions/: arithmetic.rs  comparison.rs  conversion.rs  list.rs  math.rs  misc.rs  path.rs  path_parse.rs  regex.rs  repr.rs  string.rs
crates/openjd-expr/tests/: test_arithmetic.rs  test_ast_validation.rs  test_comparison.rs  test_error_formatting.rs  test_expr_value.rs  test_format_strings.rs  test_function_context.rs  test_function_library.rs  test_int64_bounds.rs  test_list_nesting.rs  test_lists.rs  test_memory.rs  test_method_coercion.rs  test_misc_builtins.rs  test_misc_getitem.rs  test_operation_limit.rs  test_parse_expression.rs  test_parsing.rs  test_path_format_mismatch.rs  test_path_mapping.rs  test_path_mapping_platform.rs  test_paths.rs  test_range_expr.rs  test_rfc_examples.rs  test_slicing.rs  test_string_operation_counting.rs  test_strings.rs  test_symbol_table.rs  test_target_type_propagation.rs  test_types.rs  test_types_evaluate.rs  test_unicode_codepoint.rs  test_unresolved_eval.rs  test_uri_paths.rs
reports/: expr-model-future-revision-readiness.md  (+4 more)
(+220 files in other folders)
